# foxops

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.ci.yml  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  repro_concurrency.py  test-code_roche.db
.codeboarding/: API_Layer.md  Application_Services.md  Core_Engine.md  Data_Access_Layer.md  External_Integration_Layer.md  Shared_Models_Configuration.md  on_boarding.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 2022_09_04-1ea321fde006_create_incarnation_table.py  2023_02_15-0c83b17b732d_add_change_table.py  2023_02_27-b5550893860c_add_template_repository_to_incarnation.py  2023_05_28-001f927357ef_remove_commit_and_merge_request_in_.py  2023_11_04-00ee97d0b7a3_adding_column_for_keeping_track_of_full_.py  2025_03_26-5ae180bb248c_implemented_user_and_groups_model.py  2026_05_06-a1b2c3d4e5f6_add_auto_update_interval_to_incarnation.py
docs/: Makefile
docs/source/: advanced_usage.md  api.md  conf.py  configfile_reference.md  index.md  installation.md  terminology.md  usage.md  workflows.md
docs/source/reference/: authorization.md  templates.md
docs/source/tutorials/: backwards-compatible-template-changes.md  index.md  reset-incarnation.md  write-template-from-scratch.md
scripts/: await-healthy.sh  foxops-startup.sh  gitlab.rb  healthcheck-and-setup.sh
src/foxops/: __init__.py  __main__.py  auth.py  authz.py  dal.py  dependencies.py  error_handlers.py  errors.py  jwt.py  logger.py  logging.py  middlewares.py  models.py  openapi.py  reconciliation.py  settings.py  utils.py
src/foxops/cli/: __main__.py
src/foxops/cli/v1_compat_reconcile/: __init__.py  api.py  models.py  reconcile.py
src/foxops/database/: __init__.py  dal.py  engine.py  schema.py
src/foxops/database/repositories/: change.py
src/foxops/database/repositories/change/: errors.py  model.py  repository.py
src/foxops/database/repositories/group/: errors.py  model.py  repository.py
src/foxops/database/repositories/incarnation/: errors.py  model.py  repository.py
src/foxops/database/repositories/user/: errors.py  model.py  repository.py
src/foxops/engine/: __init__.py  __main__.py  custom_filters.py  errors.py  fvars.py  initialization.py  models.py  rendering.py  update.py
src/foxops/engine/models/: incarnation_state.py  template_config.py
src/foxops/engine/patching/: git_diff_patch.py
src/foxops/hosters/: __init__.py  gitlab.py  local.py  types.py
src/foxops/hosters/gitlab/: __init__.py  auth.py  gitlab.py  settings.py
src/foxops/models/: __init__.py  change.py  desired_incarnation_state.py  errors.py  group.py  helpers.py  incarnation.py  user.py
src/foxops/reconciliation/: __init__.py  initialization.py  update.py  utils.py
src/foxops/routers/: auth.py  changes.py  group.py  incarnations.py  not_found.py  template.py  user.py  version.py
src/foxops/services/: authorization.py  auto_update.py  change.py  group.py  incarnation.py  template.py  user.py
src/foxops/static/: index.html
tests/: conftest.py  test_cli.py  test_dal.py  test_migrations.py  test_reconciliation.py  test_settings.py  test_utils.py
tests/_plugins/: fixtures_database.py  fixtures_gitlab.py
tests/database/: test_change_repository.py  test_incarnation_repository.py  test_user_repository.py
tests/database/migrations/: conftest.py  test_00ee97d0b7a3.py
tests/e2e/: assertions.py  conftest.py  helpers.py  test_e2e.py  test_incarnations_api.py  test_incarnations_legacy.py  test_reconciliation_gherkin.py
tests/e2e/features/: Reconciliation.feature
tests/e2e/hosters/: test_gitlab.py
tests/e2e/testdata/template-repo/: fengine.yaml
tests/e2e/testdata/template-repo/template/: README.md
tests/engine/: test_cli.py  test_custom_filters.py  test_initialization.py  test_rendering.py  test_update.py
tests/engine/models/: test_template_config.py
tests/hosters/: test_concurrency.py  test_local.py
tests/reconciliation/: conftest.py  test_initialization.py  test_update.py
tests/routers/: conftest.py  test_api.py  test_auth.py  test_authz.py  test_changes.py  test_frontend.py  test_incarnations.py  test_user.py  test_version.py
tests/services/: test_auto_update.py  test_change.py
ui/: .eslintrc.cjs  .gitignore  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  emotion.d.ts  global-styles.ts  main.tsx  sum.test.ts
ui/src/components/EnterScreen/: EnterScreen.tsx
ui/src/components/Incarnations/: List.tsx
ui/src/components/IncarnationsOperationsWindow/: IncarnationsOperationsWindow.tsx
ui/src/components/Layout/: Layout.tsx
ui/src/components/Layout/Aside/: Aside.tsx
ui/src/components/Login/: Login.tsx
ui/src/constants/: incarnations.consts.ts
ui/src/hooks/: use-col-resize-body-cursor.ts  use-incarnations-data.ts  use-on-click-outside.ts  use-worker.ts
ui/src/interfaces/: authz.types.ts  group.types.ts  incarnations.type.ts  incarnations.types.ts  user.types.ts
ui/src/routes/incarnations/: BulkForm.tsx  BulkUpdate.tsx  CreateForm.tsx  DiffIncarnation.tsx  EditForm.tsx  Form.tsx  Item.tsx  List.tsx  parts.tsx
ui/src/routes/login/: Login.tsx
ui/src/services/: api.ts  auth.ts  incarnations.ts  storage.test.ts  storage.ts  template.ts
ui/src/shared/: types.ts
ui/src/stores/: auth.ts  error.ts  incarnations-operations.ts  incarnations-sort.ts  request-processing-store.ts  selected-incarnations.ts  show-status.ts  show-version.ts  table-settings.ts  theme-mode.ts  toolbar-search.ts
ui/src/styling/: colors.test.ts  colors.ts  prism.css  prism.js  themes.ts  transform.test.ts  transform.ts
ui/src/support/: monaco-mock.ts  setup-tests.tsx  style-mock.ts
ui/src/utils/: index.test.ts  index.ts  merge-incarnation-base-with-incarnation.ts  search-incarnations.test.ts  search-incarnations.ts  search-sort-incarnations.test.ts  search-sort-incarnations.ts
(+69 files in other folders)
