[tool.poetry]
name = "foxops"
# managed by poetry-dynamic-versioning, do not change.
version = "0.0.0"
description = "Foxops 🦊"
authors = [
    "Alexander Hungenberg <alexander.hungenberg@roche.com>",
    "Timo Furrer <timo.furrer@roche.com>",
]
readme = "README.md"

[tool.poetry.scripts]
foxops = 'foxops.cli.__main__:main_dev'
fengine = 'foxops.engine.__main__:app'

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Web Framework
uvicorn = "^0.20.0"
fastapi = "^0.88.0"

# Auxiliary
httpx = "^0.23.0"
# fixing to a smaller version until this is fixed:
# https://github.com/jd/tenacity/issues/389
tenacity = "^8.2.1"
pydantic = "^1.9.0"
structlog = ">=21.2,<23.0"
aiopath = "^0.6.10"

# Database
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.2"}
asyncpg = "^0.27.0"
aiosqlite = "^0.18.0"
alembic = {extras = ["tz"], version = "^1.8.1"}

# Remove once there are proper wheels available for 1.1.3+,
# see https://github.com/python-greenlet/greenlet/issues/312
greenlet = "^2.0.0"

# CLI
typer = ">=0.4,<0.8"

# Business
"ruamel.yaml" = "^0.17.20"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
# Linting
flake8 = "^5.0.4"
flake8-bugbear = "^23.2.13"
isort = "^5.9.3"
black = "^22.10.0"

# Testing
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.1"
pytest-mock = "^3.10.0"
pytest-randomly = "^3.12.0"

# Typing
mypy = "^1.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.2"}

# Docs
Sphinx = "^5.3.0"
sphinx-copybutton = "^0.5.0"
sphinx-design = "^0.3.0"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-mermaid = "^0.8"
myst-parser = "^0.18.0"
furo = "^2022.9.15"
pytest-alembic = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = '--cov=foxops'
filterwarnings = [
    'ignore:directory "/var/run/secrets/foxops" does not exist'
]
markers = [
    "e2e: end-to-end tests",
    "frontend: frontend tests",
    "api: api tests",
    "db: tests involving the database",
]
asyncio_mode = "auto"
python_functions = "should_* test_*"

[[tool.mypy.overrides]]
module = "aiopath"
ignore_missing_imports = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
