[tool.poetry]
name = "foxops"
# managed by poetry-dynamic-versioning, do not change.
version = "0.0.0"
description = "Foxops 🦊"
license = "Apache-2.0"
authors = [
    "Alexander Hungenberg <alexander.hungenberg@roche.com>",
    "Timo Furrer <timo.furrer@roche.com>",
]
readme = "README.md"

[tool.poetry.scripts]
fengine = 'foxops.engine.__main__:app'

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Web Framework
uvicorn = "^0.23.2"
fastapi = ">=0.103.1,<0.113.0"

# Auxiliary
httpx = "^0.25.0"
tenacity = "^8.2.1"
pydantic = "^2.3.0"
structlog = "^23.1.0"
aiopath = "^0.6.10"

# Database
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.2"}
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
alembic = {extras = ["tz"], version = "^1.8.1"}
greenlet = "^2.0.0"

# CLI
typer = "^0.9.0"

# Business
"ruamel.yaml" = "^0.17.20"
Jinja2 = "^3.0.3"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]
# Linting
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
isort = "^5.9.3"

# Testing
pytest = "^7.1.3"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pytest-randomly = "^3.12.0"

# Typing
mypy = "^1.5.1"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.2"}

# Docs
Sphinx = "^7.2.5"
sphinx-copybutton = "^0.5.0"
sphinx-design = "^0.6.1"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-mermaid = "^0.9.2"
myst-parser = "^2.0.0"
furo = "^2023.5.20"
pytest-alembic = "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
coverage = "^7.3.1"
pytest-xdist = "^3.3.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:directory "/var/run/secrets/foxops" does not exist'
]
markers = [
    "e2e: end-to-end tests",
    "frontend: frontend tests",
    "api: api tests",
    "db: tests involving the database",
]
asyncio_mode = "auto"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
overrides = [
    {module = "aiopath", ignore_missing_imports = true}
]

[tool.coverage.run]
include = ["src/**"]

[tool.coverage.report]
fail_under = 80

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
